--- a/pyproject copy.toml
+++ b/pyproject copy.toml
@@ -20,13 +20,11 @@ einops = "^0.7.0"
 h5py = "^3.10.0"
 transformers = "4.30.2"
 ftfy = "^6.1.1"
-pandas = "^2.1.3"
+pandas = "^2.0.0"
 matplotlib = "^3.8.1"
 taming-transformers-rom1504 = "^0.0.6"
 ipdb = "^0.13.13"
-ipykernel = "^6.30.0"
-ipywidgets = "^8.1.7"
-seaborn = "^0.13.2"
+numpy = "<1.26.0"  # <--- Add this line
 
 
 [build-system]
