--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ pandas = "^2.1.3"
 matplotlib = "^3.8.1"
 taming-transformers-rom1504 = "^0.0.6"
 ipdb = "^0.13.13"
+ipykernel = "^6.30.0"
+ipywidgets = "^8.1.7"
+seaborn = "^0.13.2"
 
 
 [build-system]
